menu cambio opcion de persojanes

--- a/Personajes.html
+++ b/Personajes.html
@@ -20,8 +20,8 @@
 
 			<nav>
 
-				<a href="Principal.html" class="activo">Inicio</a>
-				<a href="Personajes.html">Personajes</a>
+				<a href="Principal.html" >Inicio</a>
+				<a href="Personajes.html" class="activo">Personajes</a>
 
 			</nav>
 
