--- a/Personajes.html
+++ b/Personajes.html
@@ -8,7 +8,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">  
 
     <script src="https://kit.fontawesome.com/176f0d5338.js" crossorigin="anonymous"></script>
+
 	<link rel="icon" type="image/x-icon" href="img/one piece.ico">
+
+	<script defer src="scrollAnimation.js"></script>
 
 	<title>Anime</title>
 </head>
