--- a/Principal.html
+++ b/Principal.html
@@ -11,6 +11,8 @@
 
 	<link rel="icon" type="image/x-icon" href="img/one piece.ico">
 
+	<script defer src="principal.js"></script>
+
 	<title>Anime</title>
 </head>
 <body>
@@ -32,7 +34,7 @@
 	<main>
 		<div class="sipnosis">
 
-			<div class="menu-contenedor">
+			<div class="sipnosis-contenedor">
 
 				<h3 class="sipnotis-titulo">Sipnosis</h3>
 				<p class="sipnotis-texto">
